# VideoExtractor

./: .gitignore  requirements.txt  setup.cfg
script/: extract_video_to_directory.py
src/austin_heller_repo/: video_wrapper.py
