[metadata]
name = video-extractor-austinhellerrepo
version = 0.0.1
author = Austin Heller
description = A package that extracts frames from a video file
url = https://github.com/AustinHellerRepo/VideoExtractor
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  common-austinhellerrepo@git+https://github.com/AustinHellerRepo/Common
  opencv-python

[options.packages.find]
where = src
